@@ -96,6 +96,7 @@ class PicasaPhotoList(base.PhotoList):
                     'title'      : entry['title']['$t'],
                     'summary'    : entry['summary']['$t'],
                     'page_url'   : entry['link'][1]['href'],
+                    'is_private' : entry['gphoto$access']['$t'] != 'public',
                     'trash'      : trash.Ban(self.photolist)}
 
             # exif
